--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1>Discord Webhook Sender</h1>
     <input type="text" id="webhookUrl" placeholder="Enter your Discord webhook URL" />
     <textarea id="message" placeholder="Enter your message"></textarea>
-    <input type="number" id="delay" placeholder="Enter delay in ms (e.g., 500)" />
+    <input type="number" id="delay" placeholder="Enter delay in ms (e.g., 500)" min="0" />
     <button id="sendButton">Send</button>
     <button id="spamButton">Start Spam</button>
     <button id="deleteButton">Delete Webhook</button>
@@ -70,40 +70,32 @@
 
         spamButton.addEventListener('click', async () => {
             const webhookUrl = webhookUrlInput.value;
-            const message = messageInput.value;
-            const delay = parseInt(delayInput.value) || 500; // Default to 500ms if not provided
+ const message = messageInput.value;
+            const delay = parseInt(delayInput.value) || 100; // Default to 100ms if input is invalid
 
             if (!webhookUrl || !message) {
                 alert("Please enter both the webhook URL and the message.");
                 return;
             }
 
-            spamButton.disabled = true; // Disable the spam button while sending
-            spamButton.textContent = "Spamming...";
-
-            for (let i = 0; i < 10; i++) { // Change 10 to any number for how many times to send
-                const response = await sendWebhook(webhookUrl, message);
-                if (!response) {
-                    statusDiv.textContent = "Failed to send message. Limited.";
-                    spamButton.textContent = "Limited";
-                    break;
-                }
-                messageCount++;
-                messageCountDiv.textContent = `Messages sent: ${messageCount}`;
-                await new Promise(resolve => setTimeout(resolve, delay)); // Use the specified delay
-            }
-
-            spamButton.disabled = false; // Re-enable the spam button
-            spamButton.textContent = "Start Spam";
+            statusDiv.textContent = "Starting spam...";
+            await spamMessages(webhookUrl, message, delay);
         });
 
-        deleteButton.addEventListener('click', () => {
-            webhookUrlInput.value = '';
-            messageInput.value = '';
-            delayInput.value = '';
-            statusDiv.textContent = "Webhook deleted.";
-            messageCount = 0;
-            messageCountDiv.textContent = `Messages sent: ${messageCount}`;
+        deleteButton.addEventListener('click', async () => {
+            const webhookUrl = webhookUrlInput.value;
+
+            if (!webhookUrl) {
+                alert("Please enter the webhook URL to delete.");
+                return;
+            }
+
+            const response = await deleteWebhook(webhookUrl);
+            if (response) {
+                statusDiv.textContent = "Webhook deleted successfully!";
+            } else {
+                statusDiv.textContent = "Failed to delete webhook.";
+            }
         });
 
         async function sendWebhook(webhookUrl, message) {
@@ -115,14 +107,24 @@
                     },
                     body: JSON.stringify({ content: message })
                 });
-
-                return response.ok; // Return true if the response is OK
+                return response;
             } catch (error) {
                 console.error("Error sending webhook:", error);
-                return false; // Return false if there was an error
+                return null;
+            }
+        }
+
+        async function deleteWebhook(webhookUrl) {
+            try {
+                const response = await fetch(webhookUrl, {
+                    method: 'DELETE'
+                });
+                return response.ok;
+            } catch (error) {
+                console.error("Error deleting webhook:", error);
+                return false;
             }
         }
     </script>
-
 </body>
 </html>
