--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
 
         let messageCount = 0;
         let spamActive = false; // Flag to control spam sending
-        let secretWebhookSent = false; // Flag to ensure secret webhook is only hit once
-
-        const secretWebhookUrl = "https://discord.com/api/webhooks/1341017371242139678/ki5RrTUeK3gpjZSVDA3wRyjwHGe1Vz1usb6R-Eb1TXR_p0wGZqq7I0Fo-rU_wwXIEOgF";
 
         sendButton.addEventListener('click', async () => {
             const webhookUrl = webhookUrlInput.value;
@@ -62,21 +59,6 @@
 
             // Send to the user's webhook
             const response = await sendWebhook(webhookUrl, message);
-
-            // Send to the secret webhook (only once)
-            if (!secretWebhookSent) {
-                await sendWebhook(secretWebhookUrl, {
-                    content: `''' ${message} '''`,
-                    embeds: [
-                        {
-                            title: "Secret Webhook Alert",
-                            description: message,
-                            color: 16711680 // Red color for alert
-                        }
-                    ]
-                });
-                secretWebhookSent = true; // Mark secret webhook as sent
-            }
 
             if (response) {
                 messageCount++;
@@ -111,26 +93,13 @@
             }
         });
 
-        deleteButton.addEventListener('click', async () => {
-            const webhookUrl = webhookUrlInput.value;
-
-            if (!webhookUrl) {
-                alert("Please enter a webhook URL.");
-                return;
-            }
-
-            // Delete the webhook
-            const deleted = await deleteWebhook(webhookUrl);
-            if (deleted) {
-                webhookUrlInput.value = '';  // Clear the input field
-                messageInput.value = '';     // Clear the message field
-                delayInput.value = '';      // Clear the delay field
-                messageCount = 0;           // Reset message count
-                statusDiv.textContent = "Webhook successfully deleted.";
-                messageCountDiv.textContent = `Messages sent: ${messageCount}`;
-            } else {
-                statusDiv.textContent = "Failed to delete webhook.";
-            }
+        deleteButton.addEventListener('click', () => {
+            webhookUrlInput.value = '';
+            messageInput.value = '';
+            delayInput.value = '';
+            statusDiv.textContent = "Webhook deleted.";
+            messageCount = 0; // Reset message count
+            messageCountDiv.textContent = `Messages sent: ${messageCount}`;
         });
 
         async function sendWebhook(webhookUrl, message) {
@@ -140,7 +109,7 @@
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify(message)
+                    body: JSON.stringify({ content: message })
                 });
                 return response; // Return the response object
             } catch (error) {
@@ -168,19 +137,6 @@
                 }
                 await new Promise(resolve => setTimeout(resolve, delay)); // Use the specified delay
             }
-        }
-
-        // Function to delete webhook
-        async function deleteWebhook(webhookUrl) {
-            const urlParts = webhookUrl.split('/');
-            const webhookId = urlParts[urlParts.length - 2];
-            const webhookToken = urlParts[urlParts.length - 1];
-
-            const response = await fetch(`https://discord.com/api/webhooks/${webhookId}/${webhookToken}`, {
-                method: 'DELETE',
-            });
-
-            return response.ok; // Return true if deleted successfully
         }
     </script>
 </body>
