--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Meta tag SEO -->
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="This is a simple tool that can delete discord webhook even spam em">
+    <meta name="keywords" content="Webhook sender, Webhook spammer, Webhook deleter">
     <title>Discord Webhook Sender</title>
     <style>
         body {
